# src/main/java/com/pyco/pycozza/model/User.java
@@ -20,7 +20,7 @@ public class User {
 
     @Getter
     @Setter
-    private String name;
+    private String fullName;
 
     @Getter
     @Setter
